# maga

./: .env  maga.ipynb  main.py  pyproject.toml  settings.py  table.csv
